--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
-        
+        <div >
+            <div>
+                <h1>Let's make</h1>
+                <h1> beautiful flowers a </h1>
+                <h1>part of your life.</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable 
+                    content of a page when looking at its layout. The point of using Lorem Ipsum is 
+                    that it has a more-or-less normal distribution of letters</p>
+                <button class="">Shop Now</button>
+                </div>
+            <div>
+                <img src="images/pngwing 6.png" alt="">
+            </div>
+        </div>
+
     </header>
     <main>
 
