--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
     <header>
         <div >
-            <div>
+            <div class="header-part">
                 <h1>Let's make</h1>
                 <h1> beautiful flowers a </h1>
                 <h1>part of your life.</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable 
                     content of a page when looking at its layout. The point of using Lorem Ipsum is 
                     that it has a more-or-less normal distribution of letters</p>
-                <button class="">Shop Now</button>
-                </div>
-            <div>
-                <img src="images/pngwing 6.png" alt="">
+                <button class="btn-primary">Shop Now</button>
+            </div>
+            <div class="header-part">
+                <img class="banner-pic" src="images/pngwing 10.png" alt="">
             </div>
         </div>
 
