--- a/index.html
+++ b/index.html
@@ -28,10 +28,73 @@
 
     </header>
     <main>
+        <section >
+            <div class="feature-flowers">
+                <h3>Our Featured Flowers</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="feature-images">
+               <div>
+                <img src="images/pngwing 6.png" alt="">
+               </div>
+               <div>
+                <img src="images/pngwing 5.png" alt="">
+               </div>
+               <div><img src="images/pngwing 7.png" alt=""></div>
+            </div>
+        
+        </section>
+        <section>
+            <div>
+                <img src="images/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img src="images/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+            <div>
+                <img src="images/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
 
+        <!-- hot deal section -->
+        <section>
+            <div>
+                <h1>Hot Deal ! Sale Up To 25% <span>off</span></h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn-primary">Sign up</button>
+            </div>
+            <div>
+                <img src="images/pngwing 8.png" alt="">
+            </div>
+        </section>
+        <!-- instagram part -->
+        <section>
+
+            <div>
+                <h3>Instagram</h3>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div>
+                <img src="images/Flower 01.png" alt="">
+                <img src="images/Rectangle 4.png" alt="">
+                <img src="images/Rectangle 5.png" alt="">
+                <img src="images/Rectangle 6.png" alt="">
+            </div>
+        </section>
+        <!-- get the latest deals part -->
+        <section>
+            <h1>Get The Latest Deals</h1>
+            <p>$30 coupon for first shopping</p>
+            <input placeholder="Enter your email here...." type="email" name="" id="">
+            <button class="btn-primary">Subscribe</button>
+        </section>
     </main>
     <footer>
-
+        <h1><span>Flower</span><span>Shop</span></h1>
+        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
     </footer>
 </body>
 </html>
