--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <!-- instagram section -->
         <div class="featured">
             <h1 id="featured-title">Instagram</h3>
-                <p class="featured-peragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <p class="featured-peragraph">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
         </div>
         <div class="instagram-images">
             <img src="images/Flower 01.png" alt="">
@@ -99,7 +99,11 @@
             <img src="images/Rectangle 5.png" alt="">
             <img src="images/Rectangle 6.png" alt="">
         </div>
-
+        <!-- for extra mark -->
+        <div class="youtube">
+            <h1 >Watch some beautiful flowers here!</h3>
+                <iframe width="600" height="400" src="https://www.youtube.com/embed/i810CxN5Q6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
         <!-- information section  -->
         <div class="info">
             <h1>Get The Latest Deals</h1>
@@ -107,6 +111,9 @@
             <input type="email" placeholder="Enter your email here....">
             <button class="btn-primary">Subscribe</button>
         </div>
+
+        
+
     </main>
 
     <footer>
