--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
         </div>
         <!-- for extra mark -->
         <div class="youtube">
-            <h1 >Watch some beautiful flowers here!</h3>
-                <iframe width="600" height="400" src="https://www.youtube.com/embed/i810CxN5Q6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <h1 >Watch some beautiful flowers here!</h1>
         </div>
+        <div class="youtube-video">
+            <iframe width="600" height="400" src="https://www.youtube.com/embed/i810CxN5Q6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
         <!-- information section  -->
         <div class="info">
             <h1>Get The Latest Deals</h1>
