--- a/index.html
+++ b/index.html
@@ -99,18 +99,22 @@
             <img src="images/Rectangle 5.png" alt="">
             <img src="images/Rectangle 6.png" alt="">
         </div>
-        <!-- for extra mark -->
-        <div class="youtube">
-            <h1 >Watch some beautiful flowers here!</h1>
-        </div>
-        <div class="youtube-video">
-            <iframe width="600" height="400" src="https://www.youtube.com/embed/i810CxN5Q6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+     
         <!-- information section  -->
         <div class="info">
             <h1>Get The Latest Deals</h1>
             <p>$30 coupon for first shopping</p>
             <input type="email" placeholder="Enter your email here....">
             <button class="btn-primary">Subscribe</button>
+        </div>
+        <!-- for extra mark -->
+        <div class="youtube-part">
+            <div class="youtube">
+                <h1 >Watch some beautiful flowers here!</h1>
+             </div>
+             <div class="youtube-video">
+                  <iframe width="1280" height="600" src="https://www.youtube.com/embed/i810CxN5Q6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             </div>
         </div>
 
         
